--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DelCampo</title>
+    <title>Del Campo</title>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/slick.css" type="text/css" /> 
@@ -62,13 +62,13 @@ https://templatemo.com/tm-560-astro-motion
             <div class="page-width-1 page-left">
               <div class="d-flex position-relative tm-border-top tm-border-bottom intro-container">
                 <div class="intro-left tm-bg-dark">
-                  <h2 class="mb-4">Welcome to Astro Motion</h2>
+                  <h2 class="mb-4">Bienvenidos a Del Campo</h2>
                   <p class="mb-4">
-                    This HTML template has a motion video background loop which is provided by <a rel="sponsored" href="https://getfreepictures.com" target="_blank">Get Free Pictures</a>. This is
-                    one-page responsive layout for your websites. Feel
-                  free to use this for a commercial purpose. </p>
+                    Sitio en construcción, iniciativa de asocio entre pequeños comerciantes y <a rel="sponsored" href="https://getfreepictures.com" target="_blank">Get Free Pictures</a>. This is
+                    campesinos de la región. El cual tiene como objetivo contrarrestar
+                  el abuso de los grandes mayorias y cadenas</p>
                   <p class="mb-0">
-                  You are not permitted to redistribute this template on your Free CSS collection websites. Please <a rel="nofollow" href="https://templatemo.com/contact" target="_blank">contact us</a> for more information. </p>
+                  En busqueda de una relación de beneficio mutuo. Please <a rel="nofollow" href="https://templatemo.com/contact" target="_blank">contact us</a> for more information. </p>
                 </div>
                 <div class="intro-right">
                   <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
