--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@ https://templatemo.com/tm-560-astro-motion
                 <div class="intro-left tm-bg-dark">
                   <h2 class="mb-4">Bienvenidos a Del Campo</h2>
                   <p class="mb-4">
-                    Sitio en construcción, iniciativa de asocio entre pequeños comerciantes y <a rel="sponsored" href="https://getfreepictures.com" target="_blank">Get Free Pictures</a>. This is
+                    Sitio en construcción, iniciativa de asocio entre pequeños comerciantes y 
                     campesinos de la región. El cual tiene como objetivo contrarrestar
-                  el abuso de los grandes mayorias y cadenas</p>
+                  el abuso de los grandes mayorias y cadenas de supermercados</p>
                   <p class="mb-0">
-                  En busqueda de una relación de beneficio mutuo. Please <a rel="nofollow" href="https://templatemo.com/contact" target="_blank">contact us</a> for more information. </p>
+                  En busqueda de una relación de beneficio mutuo. Ponemos la tegnologia al servicio del productor consumidor</p>
                 </div>
                 <div class="intro-right">
                   <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
