--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@ https://templatemo.com/tm-560-astro-motion
                 <div class="intro-left tm-bg-dark">
                   <h2 class="mb-4">Bienvenidos a Del Campo</h2>
                   <p class="mb-4">
-                    Sitio en construcción, iniciativa de asocio entre pequeños comerciantes y 
-                    campesinos de la región. El cual tiene como objetivo contrarrestar
+                    -- Sitio en construcción -- Iniciativa de asocio entre pequeños comerciantes y 
+                    campesinos de las regiones del país. El cual tiene como objetivo contrarrestar
                   el abuso de los grandes mayorias y cadenas de supermercados</p>
                   <p class="mb-0">
-                  En busqueda de una relación de beneficio mutuo. Ponemos la tegnologia al servicio del productor consumidor</p>
+                  En busqueda de una relación de beneficio mutuo. Ponemos la tecnología al servicio del productor-consumidor</p>
                 </div>
                 <div class="intro-right">
                   <img src="img/home-img-1.jpg" alt="Image" class="img-fluid intro-img-1">
@@ -94,10 +94,12 @@ https://templatemo.com/tm-560-astro-motion
               <div class="mx-auto tm-border-top gallery-slider">
                 <figure class="effect-julia item">
                     <img src="img/gallery-img-01.jpg" alt="Image">
+                  <!--
                     <figcaption>
                         <div>
                             <p>Julia dances in the deep dark</p>
                         </div>
+                        -->
                         <a href="#">View more</a>
                     </figcaption>
                 </figure>
