--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ https://templatemo.com/tm-560-astro-motion
                   <div class="map-outer">
                     <div class="gmap-canvas">
                         <iframe width="100%" height="400" id="gmap-canvas"
-                            src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                            src="https://goo.gl/maps/L3RYh6vXjoTqgMJE8"
                             frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                     </div>
                 </div>
