--- a/index.html
+++ b/index.html
@@ -221,9 +221,7 @@ https://templatemo.com/tm-560-astro-motion
                   <!-- Map -->
                   <div class="map-outer">
                     <div class="gmap-canvas">
-                        <iframe width="100%" height="400" id="gmap-canvas"
-                            src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d248.4800699464168!2d-75.67692629535696!3d4.824708842217911!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e3880d2f08e8499%3A0xc09938c78affc431!2sFrutas%20y%20Verduras%20Moncada!5e0!3m2!1ses-419!2sco!4v1661549533171!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
                 </div>
