--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ https://templatemo.com/tm-560-astro-motion
                   Comercialización frutas, verduras y derivados de la producción agropecuarios de primera necesidad 
                 </p>
                 <p>
-                  Alternativa que busca un proceso comercial justo, que neutralice las malas practicas de las malas practicas especulativas
+                  Alternativa que busca un proceso comercial justo, que neutralice las malas practicas especulativas
                 </p>
               </div>              
             </div>
@@ -206,9 +206,7 @@ https://templatemo.com/tm-560-astro-motion
                 </div>
                 <div class="col-md-6 tm-contact-right">                  
                   <p class="mb-4">
-                    Integer erat turpis, vestibulum pellentesque aliquam
-                    ultricies, finibus nec dui. Donec bibendum enim mi,
-                    at tristique leo feugiat at.
+                    Agradecimieto especial a todo el equipo formador del BootCamp, excelentes profesores.
                   </p>
                   <div>
                     Email: <a href="mailto:info@company.com" class="tm-link-white">info@company.com</a>
