--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ https://templatemo.com/tm-560-astro-motion
               <div class="tm-bg-dark content-pad">
                 <h2 class="mb-4">Acerca de la Iniciativa</h2>
                 <p class="mb-4">
-                  Comercialización frutas, verduras y derivados de la producción agropecuarios de primera necesidad 
+                  Comercialización de frutas, verduras y derivados de la producción agropecuaria de primera necesidad 
                 </p>
                 <p>
                   Alternativa que busca un proceso comercial justo, que neutralice las malas practicas especulativas
@@ -206,7 +206,7 @@ https://templatemo.com/tm-560-astro-motion
                 </div>
                 <div class="col-md-6 tm-contact-right">                  
                   <p class="mb-4">
-                    Agradecimieto especial a todo el equipo formador del BootCamp, excelentes profesores.
+                    Agradecimieto muy especial a todo el equipo formador del BootCamp, excelentes profesores.
                   </p>
                   <div>
                     Email: <a href="mailto:info@company.com" class="tm-link-white">info@company.com</a>
