--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@ https://templatemo.com/tm-560-astro-motion
                       <div class="circle"></div>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#0" data-no="2">Gallery</a>
+                      <a class="nav-link" href="#0" data-no="2">Portafolio</a>
                       <div class="circle"></div>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#0" data-no="3">About</a>
+                      <a class="nav-link" href="#0" data-no="3">Nosotros</a>
                       <div class="circle"></div>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#0" data-no="4">Contact</a>
+                      <a class="nav-link" href="#0" data-no="4">Contacto</a>
                       <div class="circle"></div>
                     </li>
                   </ul>
