--- a/index.html
+++ b/index.html
@@ -208,8 +208,12 @@ https://templatemo.com/tm-560-astro-motion
                   </form>
                 </div>
                 <div class="col-md-6 tm-contact-right">                  
-                  <p class="mb-4">
-                    Agradecimieto muy especial a todo el equipo formador del BootCamp, excelentes profesores.
+                  <p class="mb-4">Agradecimiento muy especial a todo el equipo del BootCamp, excelentes profesores, excelente apoyo técnico.
+
+Ingeniero José Rafael, su espíritu de colaboración, de compartir el conocimiento, paciencia, alegría y energía inspiran a seguir por el camino del aprendizaje.
+
+Muchas gracias.
+
                   </p>
                   <div>
                     Email: <a href="mailto:info@company.com" class="tm-link-white">info@company.com</a>
